Add JWT refresh token functionality with support for multiple tokens
- Updated environment configuration to include JWT refresh secret and multiple token allowance.
- Enhanced configuration schema to validate new JWT refresh settings.
- Refactored JwtRefreshGuard to handle refresh token validation and user retrieval.
- Implemented refresh token logic in AuthService, allowing for both single and multiple token management.
- Added new refresh token endpoint in AuthController with appropriate guards.
- Created RefreshTokenDto for refresh token requests.
- Updated UserController to retrieve active sessions when multiple tokens are enabled.
- Modified User schema to store multiple refresh tokens with additional metadata.

--- a/example.env
+++ b/example.env
@@ -19,3 +19,9 @@ SENDGRID_API_KEY=
 # string required 
 JWT_SECRET=
 
+# string required 
+JWT_REFRESH_SECRET=
+
+# boolean  [Allow multiple refresh tokens per user]
+ALLOW_MULTIPLE_REFRESH_TOKENS=
+
